--- a/css/style.css
+++ b/css/style.css
@@ -546,12 +546,14 @@ footer .footer-content .col:not(:first-child) ul a:hover {
       left: 0;
       width: 100%;
       flex-direction: column;
+      align-items: stretch;
       text-align: center;
       background-color: #fff;
       border-top: 1px solid rgb(0 0 0 / 0.1);
       box-shadow: 0 .3rem .3rem rgb(0 0 0 / 0.07);
       display: none;
    }
+  
    .nav-content ul li a {
       display: block;
    }
